# TITO_Explore_package

./: README.md  pyproject.toml
examples/: ex_compute_join.py  ex_compute_join2.py  ex_get_inversion_set.py  ex_normalize_TITO.py  examples_demo.ipynb  test_new_reflection.ipynb
src/TITO_Explore/: __init__.py  comparison.py  inversion_set.py  join.py  new_reflection.py  normalization.py  reflection.py  types.py  utils.py
src/TITO_Explore.egg-info/: PKG-INFO  SOURCES.txt
